# GenshinAnalyzer

./: .gitignore  README.md  pyproject.toml
genshin_artifact_pmf_package/: README.md  genshin_artifact_5star_domain_pmf.json  initial_substat_count_pmf.csv  main_stat_pmf_by_slot.csv  minor_affix_roll_values_5star.csv  minor_affix_type_weights.csv  set_pmf.csv  slot_pmf.csv  stat_name_mapping_zh_en.json
notebooks/: account_data_entry.ipynb  artifact_database_view.ipynb  character_database_view.ipynb  weapon_database_view.ipynb
src/genshin_analyser/: character_source.py  cli.py  config.py  db.py  exceptions.py  models.py  repository.py  time.py
src/genshin_analyzer/: __init__.py  character_source.py  cli.py  db.py  exceptions.py  models.py  repository.py
